# yuqiii-wang.github.io

./: README.md  _config.yml
KnowledgeNotes/: .gitignore  README.md
KnowledgeNotes/db/: db_adv_practices.md  db_basics.md  index.md  optimization.md  sharding_and_partitioning.md  sql.md
KnowledgeNotes/db/ldap/: indexing.md  ldap_proto.md  ldap_schema.md
KnowledgeNotes/db/mongodb/: indexing.md  mongodb.md  replications.md
KnowledgeNotes/db/mysql/: indexing.md  mysql.md  optimization.md
KnowledgeNotes/db/redis/: examples.md  performance.md  redis.md
KnowledgeNotes/dev_ops/: performance_issues.md
KnowledgeNotes/dev_ops/aws/: concepts.md  connection_checks.md  operations.md  system_mgr.md
KnowledgeNotes/dev_ops/k8s/: k8s.md  k8s_network.md  minikube.md
KnowledgeNotes/dev_ops/linux_devops/: linux_devops.md
KnowledgeNotes/dev_ops/software_tools/CMake/: CMakeLists.txt  cmake_tutorials.md
KnowledgeNotes/fundamental_computer/: terminologies.md
KnowledgeNotes/fundamental_computer/compilation_principles/: compilation_principles.md  computer_arch.md  executable.md  executable_elf.md  linker.md  misc.md
KnowledgeNotes/fundamental_computer/digital_electronics/: FPGA.md  VHDL.md  circuit_basics.md  verilog.md
KnowledgeNotes/fundamental_computer/hardwawre/: bootloader.md
KnowledgeNotes/fundamental_computer/operating_sys/: OS.md  memory.md  (+2 more)
KnowledgeNotes/mgt_and_design/: ITOfficeConcepts.md  obj_oriented_programming.md
KnowledgeNotes/network/: data_communication.md  headers.md  networks.md  squid_proxy.md  vnc.md  web_concepts_and_software.md
(+384 files in other folders)
